data/derived/fa15/progs/unify/prog3421.ml.out
Characters 22-27:
  let _ = mulByDigit 4 [3,2,1];;
                        ^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type int
